@@ -16,6 +16,9 @@
 		<spring.version>4.0.6.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<mockito.version>1.10.19</mockito.version>
+		<myfaces.version>2.2.7</myfaces.version>
+		<jackson.version>2.5.2</jackson.version>
+		<jdk.path>/Library/Java/JavaVirtualMachines/jdk1.7.0_75.jdk/Contents/Home</jdk.path>
 	</properties>
 
 	<dependencies>
@@ -54,18 +57,24 @@
 		</dependency>
 
 		<dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 
-		 <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>${mockito.version}</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
@@ -80,14 +89,65 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.9.v20150224</version>
+				<configuration>
+				    <jvmArgs>-XX:PermSize=256M -XX:MaxPermSize=512M -Xmx1024m -Xms1024m</jvmArgs>
+					<httpConnector>
+						<port>9090</port>
+					</httpConnector>
+					<webApp>
+					   <contextPath>/websports</contextPath>
+					</webApp>
+					<scanIntervalSeconds>5</scanIntervalSeconds>
+				</configuration>
+
+			</plugin>
+
+			<!-- generate source packages -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- generate javadoc packages -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.2</version>
+				<configuration>
+                    <javadocExecutable>${jdk.path}/bin/javadoc</javadocExecutable>
+                </configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
 	<modules>
-		<module>model</module>
 		<module>persistence</module>
-		<module>controllers</module>
+		<module>model</module>
 		<module>service</module>
+		<module>controllers</module>
 		<module>websports</module>
 	</modules>
 	<description>Personal project whose goal is to provide a management platform to amateur sport teams.</description>
